--- a/grl-aws-java-basic/pom.xml
+++ b/grl-aws-java-basic/pom.xml
@@ -11,8 +11,8 @@
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <aws-lambda-java-core.version>1.1.0</aws-lambda-java-core.version>
-        <aws-lambda-java-log4j.version>1.0.0</aws-lambda-java-log4j.version>
+        <aws-lambda-java-core.version>1.2.0</aws-lambda-java-core.version>
+        <log4j.version>2.8.2</log4j.version>
         <jackson-core.version>2.9.6</jackson-core.version>
         <httpclient.version>4.5.10</httpclient.version>
     </properties>
@@ -24,9 +24,14 @@
             <version>${aws-lambda-java-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-log4j</artifactId>
-            <version>${aws-lambda-java-log4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -37,11 +42,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
